# pycurrents

./: .gitignore  MANIFEST.in  README.txt  license.txt  pyproject.toml  pytest.ini  runsetup.py  setup.py  setup_helper.py
doc/: INSTALL.txt  Makefile  conf.py  conventions.rst  index.rst  inits.rst  tips_hints.rst
doc/modules/: adcpgui.rst  codas.rst  index.rst  num.rst
pycurrents/: __init__.py  get_test_data.py  hg_status.py  hints.py  setup_helper.py
pycurrents/adcp/: EA_estimator.py  __init__.py  _plot_tools.py  _plotraw.py  adcp_diagnostics.py  adcp_nc.py  adcp_specs.py  attitude.py  cplotter.py  dataplotter.py  ensplot.py  find_amp_refbins.py  gallery.py  gbin.py  hbin_diagnostics.py  hspan.py  mcm_avg.py  nav.py  panelplotter.py  pingavg.py  pingedit.py  pingsuite.py  plot_ashtech_subs.py  plot_enshcorr.py  plot_hbin_subs.py  plot_lastfew_vec.py  plot_posmv_subs.py  plot_uvship.py  plotnav.py  plottime_diagnostics.py  polygon_editor.py  qplot.py  quick_adcp.py  quick_asect.py  quick_codas.py  quick_docs.py  quick_mpl.py  quick_npy.py  quick_run.py  quick_setup.py  (+23 more)
pycurrents/adcpgui_qt/: argument_parsers.py  gui_assembler.py
pycurrents/codas/: __init__.py  codasmask.py  rewrite_codas.py  tester.py  tools.py
pycurrents/data/: __init__.py  adcp_ts.py  drifters.py  him.py  jgofs.py  ladcp.py  modes.py  mods.rst  navcalc.py  nodc_mcm.py  ocean.py  pmel_ctd.py  seabird.py  seawater.py  sound.py  spice.py  ssh.py  sst.py  suntimes.py  timetools.py  topo.py  wind.py  woa.py
pycurrents/file/: __init__.py  ascfile.py  ascfileglob.py  binfile.py  binfile_n.py  (+7 more)
(+360 files in other folders)
