[project]
name = "pycurrents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Currents Group, UH" }
]
requires-python = ">=3.12"
dependencies = [
    "cython>=3.0",
    "numpy",
]

[build-system]
requires = ["setuptools>=61", "cython", "numpy"]
build-backend = "setuptools.build_meta"
